# Neural-Nuances

./: README.md
2024/: 0801 Code
2024/Modern Rec System/: README.md
2024/Retromod/: LICENSE  README.md
2024/Retromod/electron-app/: index.html  main.js  package.json  preload.js  renderer.js
2024/Retromod/electron-app/assets/: styles.css
2024/Retromod/emulator-hooks/: CMakeLists.txt
2024/Retromod/emulator-hooks/include/: emulator_api.h
2024/Retromod/emulator-hooks/src/: emulator_hook.cpp
2024/Retromod/flask-backend/: app.py  requirements.txt
2024/Retromod/flask-backend/scripts/: enhance_npc.py  process_audio.py  process_textures.py
2024/Retromod/flask-backend/utils/: file_integrity.py  model_loader.py
